{
  "version": 4,
  "terraform_version": "1.8.2",
  "serial": 186,
  "lineage": "a2c5aaeb-6421-c73e-8766-f748d03c7aa4",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-https",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "443"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2024-05-23T22:29:45.908-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/continual-air-416912/global/firewalls/allow-https",
            "log_config": [],
            "name": "allow-https",
            "network": "https://www.googleapis.com/compute/v1/projects/continual-air-416912/global/networks/default",
            "priority": 1000,
            "project": "continual-air-416912",
            "self_link": "https://www.googleapis.com/compute/v1/projects/continual-air-416912/global/firewalls/allow-https",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-rabbitmq1",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "5672",
                  "15672"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2024-05-28T19:57:52.985-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/continual-air-416912/global/firewalls/allow-rabbitmq1",
            "log_config": [],
            "name": "allow-rabbitmq1",
            "network": "https://www.googleapis.com/compute/v1/projects/continual-air-416912/global/networks/default",
            "priority": 1000,
            "project": "continual-air-416912",
            "self_link": "https://www.googleapis.com/compute/v1/projects/continual-air-416912/global/firewalls/allow-rabbitmq1",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-redis",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "6379",
                  "8001"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2024-05-28T20:45:45.327-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/continual-air-416912/global/firewalls/allow-redis",
            "log_config": [],
            "name": "allow-redis",
            "network": "https://www.googleapis.com/compute/v1/projects/continual-air-416912/global/networks/default",
            "priority": 1000,
            "project": "continual-air-416912",
            "self_link": "https://www.googleapis.com/compute/v1/projects/continual-air-416912/global/firewalls/allow-redis",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "flask",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "5000"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2024-05-23T22:49:58.654-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/continual-air-416912/global/firewalls/permitir-flask",
            "log_config": [],
            "name": "permitir-flask",
            "network": "https://www.googleapis.com/compute/v1/projects/continual-air-416912/global/networks/default",
            "priority": 1000,
            "project": "continual-air-416912",
            "self_link": "https://www.googleapis.com/compute/v1/projects/continual-air-416912/global/firewalls/permitir-flask",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "rabbit_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/continual-air-416912/global/images/rabbitimage2024",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 20,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/continual-air-416912/zones/us-east1-c/disks/rabbit-mq"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/continual-air-416912/zones/us-east1-c/instances/rabbit-mq",
            "instance_id": "7016998647958381527",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-micro",
            "metadata": {
              "ssh-keys": "terraformvm:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAACAQDHvJ260GZxXhDy90y/MZLUrDX/ehE9WKQrweKF59yZKPI9SF0/jx0cxngAWou4q29tj9ApVJw0MugJb61AR8zEbcuCTyP9zG46TwGEFb1DqrGIkrPj+zkYowOBOsb4odXivHEonHNThyP6fJae+fHV0TmAV9ePt74YW22ddx3iM1wxWeGYlJlaPhtKBwLHTT8Z8XXrQWq+kAAMjdlXwDibxm58Dn5qwChKpfq3HizWVBYJjZP9kc0Cvt+vK0mn8km6hGTTiTOsimSkO9151KJFurV5ZYsRKwWyQJh4M4/oYvNJAmnY8/uTIdQjpf6e5/YIKjpEayKvpB3A5CbA93oLB1dYgq/ZEGKHRwAgg0VhhxlEMYOrJlTLAQWR93KqRwH5sg2rjWa5HlnGKCgrkpVJ4KiolLoiGnxf82RJk [...]
            },
            "metadata_fingerprint": "qv4N7dSqglk=",
            "metadata_startup_script": "#!/bin/bash\r\nsudo docker run -d --name rabbitmq -p 5672:5672 -p 15672:15672 rabbitmq:3.13-management\r\n\r\n",
            "name": "rabbit-mq",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.196.254.97",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/continual-air-416912/global/networks/default",
                "network_ip": "10.142.0.15",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/continual-air-416912/regions/us-east1/subnetworks/default",
                "subnetwork_project": "continual-air-416912"
              }
            ],
            "project": "continual-air-416912",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/continual-air-416912/zones/us-east1-c/instances/rabbit-mq",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags_fingerprint": "42WmSpB8rSM=",
            "zone": "us-east1-c"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ]
          ],
          "dependencies": [
            "data.google_client_openid_userinfo.me",
            "tls_private_key.ssh_key"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "redis_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/continual-air-416912/global/images/redis-image",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 20,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/continual-air-416912/zones/us-east1-c/disks/redis"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/continual-air-416912/zones/us-east1-c/instances/redis",
            "instance_id": "3290689518779547222",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-micro",
            "metadata": {
              "ssh-keys": "terraformvm:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAACAQDHvJ260GZxXhDy90y/MZLUrDX/ehE9WKQrweKF59yZKPI9SF0/jx0cxngAWou4q29tj9ApVJw0MugJb61AR8zEbcuCTyP9zG46TwGEFb1DqrGIkrPj+zkYowOBOsb4odXivHEonHNThyP6fJae+fHV0TmAV9ePt74YW22ddx3iM1wxWeGYlJlaPhtKBwLHTT8Z8XXrQWq+kAAMjdlXwDibxm58Dn5qwChKpfq3HizWVBYJjZP9kc0Cvt+vK0mn8km6hGTTiTOsimSkO9151KJFurV5ZYsRKwWyQJh4M4/oYvNJAmnY8/uTIdQjpf6e5/YIKjpEayKvpB3A5CbA93oLB1dYgq/ZEGKHRwAgg0VhhxlEMYOrJlTLAQWR93KqRwH5sg2rjWa5HlnGKCgrkpVJ4KiolLoiGnxf82RJk [...]
            },
            "metadata_fingerprint": "NAM6zenviME=",
            "metadata_startup_script": "#!/bin/bash\r\nsudo docker run -d --name redis-stack -p 6379:6379 -p 8001:8001 redis/redis-stack:latest",
            "name": "redis",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.23.57.153",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/continual-air-416912/global/networks/default",
                "network_ip": "10.142.0.7",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/continual-air-416912/regions/us-east1/subnetworks/default",
                "subnetwork_project": "continual-air-416912"
              }
            ],
            "project": "continual-air-416912",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/continual-air-416912/zones/us-east1-c/instances/redis",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags_fingerprint": "42WmSpB8rSM=",
            "zone": "us-east1-c"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ]
          ],
          "dependencies": [
            "data.google_client_openid_userinfo.me",
            "tls_private_key.ssh_key"
          ]
        }
      ]
    }
  ]
}